--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -8,12 +8,13 @@
 
     <!-- <link rel="stylesheet" href="../css/style.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Perfil</title>
 </head>
 <body>
     <header>
-        <img src="../img/img-logo.png" alt="logo empresarial">
+        <img src="../img/img-logo.png" alt="logo empresarial" data-aos="zoom-in" data-aos-duration="1000">
         <nav class="barra">
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
@@ -35,13 +36,13 @@
                 Hoy mi objetivo es ofrecer acompañamiento terapéutico desde un enfoque empático y personalizado. Me enfoco en ayudar a las personas a comprender y superar desafíos emocionales, promoviendo el bienestar integral y el crecimiento personal. Con una visión profesional y cálida, mi objetivo es facilitar herramientas prácticas para que cada persona pueda alcanzar su equilibrio emocional y su máximo potencial.</p>
             </div>
             <div class="perfil-jenni-foto">
-                <img src="../img/img-perfil-jenni.png" alt="psicologa jennifer mamani estrada">
+                <img src="../img/img-perfil-jenni.png" alt="psicologa jennifer mamani estrada" data-aos="fade-down" data-aos-duration="1000">
             </div>
         </section>
     </main>
     <footer class="grid-pie">
         <div class="grid1">
-            <img src="../img/img-logo.png" alt="logo empresarial">
+            <img src="../img/img-logo.png" alt="logo empresarial" data-aos="zoom-in" data-aos-duration="1000">
         </div>
         <div class="grid2">
             <h2 class="animate__animated animate__fadeIn">Datos de Contacto</h2>
@@ -75,5 +76,9 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
