--- a/pages/preguntas frecuentes.html
+++ b/pages/preguntas frecuentes.html
@@ -9,12 +9,13 @@
 
     <!-- <link rel="stylesheet" href="../css/style.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Preguntas Frecuentes</title>
 </head>
 <body>
     <header class="preguntas-frecuentes-barra">
-        <img src="../img/img-logo.png" alt="logo empresarial">
+        <img src="../img/img-logo.png" alt="logo empresarial" data-aos="zoom-in" data-aos-duration="1000">
         <nav class="barra">
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
@@ -96,7 +97,7 @@
     </main>
     <footer class="grid-pie">
       <div class="grid1">
-        <img src="../img/img-logo.png" alt="logo empresarial">
+        <img src="../img/img-logo.png" alt="logo empresarial" data-aos="zoom-in" data-aos-duration="1000">
       </div>
       <div class="grid2">
         <h2 class="animate__animated animate__fadeIn">Datos de Contacto</h2>
@@ -130,5 +131,9 @@
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
