--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -60,8 +60,8 @@
     <section class="grid-palabras">
         <div class="grid-foto"><img src="../img/img-2.jpg" alt="palabras sueltas sobre salud mental" data-aos="fade-up"></div>
     </section>
-    <section class="servicios">
-        <h2 class="animate__animated animate__fadeIn" data-aos="fade-up" data-aos-duration="1000">Servicios</h2>
+    <section class="servicios" data-aos="fade-up" data-aos-duration="1000">
+        <h2 class="animate__animated animate__fadeIn">Servicios</h2>
         <div class="servicios-psico">
             <div class="servicios-psico1">
                 <h3 class="animate__animated animate__fadeIn">Apto Psicológico para Estudio</h3>
